Changed other to notes and moved it to application level instead of special food

--- a/public/templates/application.html
+++ b/public/templates/application.html
@@ -55,8 +55,11 @@
                         <p ng-if="attendee.special_food.glukose" aria-hidden="true">Gluten</p>
                         <p ng-if="attendee.special_food.nuts" aria-hidden="true">Nötter</p>
                         <p ng-if="attendee.special_food.vegetarian" aria-hidden="true">Vegetariskt</p>
-                        <p ng-if="attendee.special_food.other" aria-hidden="true">Annat</p>
-                        </div>                       
+                        </div> 
+                        <div class="form-group" ng-model="attendee.notes" ng-show="!attendee.editMode">
+                        <label>Meddelande: </label> 
+                            <p aria-hidden="true"> {{attendee.notes}}</p>
+                        </div>                      
                         <div class="form-inline" ng-show="attendee.editMode" >
                             <div class="radio">
                                 <label>
@@ -104,9 +107,9 @@
                             </div>
                         </div>
                         <br>
-                        <div class="form-group" ng-show="checked && attendee.attend && attendee.editMode">
-                            <label>Annat:</label>
-                            <input type="text" class="form-control" ng-model="attendee.special_food.other" name="other"> 
+                        <div class="form-group" ng-show="attendee.editMode">
+                            <label>Meddelande:</label>
+                            <input type="text" class="form-control" ng-model="attendee.notes" name="notes"> 
                         </div>
                     </form>
                     </div>
