--- a/public/templates/living.html
+++ b/public/templates/living.html
@@ -76,76 +76,94 @@ function setMarkers(map) {
     <!-- Jumbotron -->
     <div class="jumbotron">
       <h1>Boende</h1>
-      <p class="lead">Nedan finner ni några hotell i Ängelholm med omnejd. Har man tänkt att stanna mer än en dag kan både Erikslund och Valhall Park rekomenderas då de omfattas av coop:s erbjudande</p>
+      <p class="lead">Boenden i och omkring Ängelholm finns det gott om. Nedan listar vi några av dem som vi rekommenderar. Kontakta respektive hotell för prisuppgifter.</p>
       <p><div id="map" style="height:300px"></div></p>
     </div>
+    <div class="row">
     <!-- Example row of columns -->
-    <div class="row">
-      <div class="col-sm-4">
-        <h2>Valhall Park</h2>
-        <p>    
-            <img class="logo visible-lg" src="images/small/valhallpark_sm.jpg" alt="Valhallpark" style="width:100%;height:100%;">
-            <img class="logo visible-md" src="images/small/valhallpark_sm.jpg" alt="Valhallpark" style="width:100%;height:100%;">
-            <img class="logo logo visible-sm logo visible-sm logo visible-sm visible-xs" src="images/small/valhallpark_sm.jpg" alt="Valhallpark" style="width:100%;height:100%;">
-        </p>
-        <p>Valhall park finner ni strax väster om Ängelholm. Hotellet ingår i Coops hotellerbjudande och finns beläget på den gamla flygflotiljens område brevid Ängelholms flygplats</p>
-        <p><a target="_blank" class="btn btn-primary" href="http://hotelvalhallpark.se/" role="button">Hotellets Hemsida &raquo;</a></p>
-        <p><a target="_blank" class="btn btn-primary" href="https://www.coophotellpremie.com/" role="button">Coop &raquo;</a></p>
-        
-      </div>
-      <div class="col-sm-4">
-        <h2>Riverside Hotell</h2>
-        <p>    
-            <img class="logo visible-lg" src="images/large/riverside_lg.jpg" alt="Riverside" style="width:100%;height:100%;">
-            <img class="logo visible-md" src="images/medium/riverside_md.jpg" alt="Riverside" style="width:100%;height:100%;">
-            <img class="logo logo visible-sm logo visible-sm logo visible-sm visible-xs" src="images/small/riverside_sm.jpg" alt="Riverside" style="width:100%;height:100%;">
-        </p>
-        <p>Mitt i centrum i hjärtat av ängelholm hittar man Riverside hotell. Här kan man välja att bo antigen i vanliga hotellrum eller så kan man dessutom välja lägenhet. Priser varierar efter efterfrågan men en sökning idag 10/4 får jag upp ett dubbelrum för 2 personer för 1280 SEK och en lägenhet för 4 personer för 1800 SEK</p>
-        <p><a target="_blank" class="btn btn-primary" href="http://www.hotelriverside.se/" role="button">Hotellets Hemsida &raquo;</a></p>         
-      </div>
-      <div class="col-sm-4">
-        <h2>Erikslund</h2>
-        <p>    
-            <img class="logo visible-lg" src="images/large/erikslund_lg.jpg" alt="Erikslund" style="width:100%;height:100%;">
-            <img class="logo visible-md" src="images/medium/erikslund_md.jpg" alt="Erikslund" style="width:100%;height:100%;">
-            <img class="logo logo visible-sm logo visible-sm logo visible-sm visible-xs" src="images/small/erikslund_sm.jpg" alt="Erikslund" style="width:100%;height:100%;">
-        </p>
-        <p>Erikslund ligger alldeles söder om Ängelholm, närmare bestämt vid den södra infarten från E6. Vill man göra sig extra fin inför festen, eller varför inte koppla av ordentligt efteråt, så kan man passa pa att ta en tur till hotellets egna SPA. Även detta hotell ingår i COOP:s hotelerbjudnde.</p>
-        <p><a target="_blank" class="btn btn-primary" href="http://www.hotellerikslund.se/sv" role="button">Hotellets Hemsida &raquo;</a></p> 
-        <p><a target="_blank" class="btn btn-primary" href="https://www.coophotellpremie.com/" role="button">Coop &raquo;</a></p>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-sm-4">
-        <h2>Margretetorp</h2>
+    <div class="col-sm-4">
+        <h2>Margretetorp Gästgifvaregård</h2>
         <p>
             <img class="logo visible-lg" src="images/large/margretetorp_lg.jpg" alt="Margretetorp" style="width:100%;height:100%;">
             <img class="logo visible-md" src="images/medium/margretetorp_md.jpg" alt="Margretetorp" style="width:100%;height:100%;">
             <img class="logo logo visible-sm logo visible-sm logo visible-sm visible-xs" src="images/small/margretetorp_sm.jpg" alt="Margretetorp" style="width:100%;height:100%;">
         </p>
-        <p>Margretetorp är det perfekta valet för den som vill ha krypavstånd hem från festen. Ett standard rum kan man få från 1400 kr per natt ifall man bokar på hotellets hemsida</p>
+        <p>Margretetorp Gästgifvaregård är det perfekta valet för den som vill ha krypavstånd hem från festen. Vad passar bättre än att sova på samma plats som festen äger rum? Exklusivt alternativ med fantastisk frukost.</p>
         <p><a target="_blank" class="btn btn-primary" href="http://www.margretetorp.se/sv/hotell/boka-online.aspx" role="button">Hotellets Hemsida &raquo;</a></p>
-      </div>
+    </div>
+    <div class="col-sm-4">
+        <h2>Riverside Hotel & Apartments</h2>
+        <p>    
+            <img class="logo visible-lg" src="images/large/riverside_lg.jpg" alt="Riverside" style="width:100%;height:100%;">
+            <img class="logo visible-md" src="images/medium/riverside_md.jpg" alt="Riverside" style="width:100%;height:100%;">
+            <img class="logo logo visible-sm logo visible-sm logo visible-sm visible-xs" src="images/small/riverside_sm.jpg" alt="Riverside" style="width:100%;height:100%;">
+        </p>
+        <p>Mitt i stán, nära såväl gågatan som natursköna Rönne å, finner man Riverside Hotel & Apartments. Här kan man välja att bo i vanligt hotellrum eller hyra någon av deras mysiga lägenheter. Trevlig personal och fräscha rum.</p>
+        <p><a target="_blank" class="btn btn-primary" href="http://www.hotelriverside.se/" role="button">Hotellets Hemsida &raquo;</a></p>         
+    </div> 
       <div class="col-sm-4">
+        <h2>Valhall Park Hotel</h2>
+        <p>    
+            <img class="logo visible-lg" src="images/small/valhallpark_sm.jpg" alt="Valhallpark" style="width:100%;height:100%;">
+            <img class="logo visible-md" src="images/small/valhallpark_sm.jpg" alt="Valhallpark" style="width:100%;height:100%;">
+            <img class="logo logo visible-sm logo visible-sm logo visible-sm visible-xs" src="images/small/valhallpark_sm.jpg" alt="Valhallpark" style="width:100%;height:100%;">
+        </p>
+        <p>Valhall Park Hotel & Konferens är beläget norr om Ängelholm, på den gamla flygflottiljen F10:s område. Hotellet ligger vackert i en lummig företagspark, nära till både flyghistoria och Ängelholms flygplats. Valhall Park Hotel & Konferens ingår i Coops förmånliga hotellerbjudande. Perfekt för den som vill stanna två nätter.</p>
+        <p><a target="_blank" class="btn btn-primary" href="http://hotelvalhallpark.se/" role="button">Hotellets Hemsida &raquo;</a></p>
+        <p><a target="_blank" class="btn btn-primary" href="https://www.coophotellpremie.com/" role="button">Coop &raquo;</a></p>
+        
+      </div>     
+      </div>  
+    <div class="row">
+
+      <div class="col-sm-4">
+        <h2>Hotell Erikslund</h2>
+        <p>    
+            <img class="logo visible-lg" src="images/large/erikslund_lg.jpg" alt="Erikslund" style="width:100%;height:100%;">
+            <img class="logo visible-md" src="images/medium/erikslund_md.jpg" alt="Erikslund" style="width:100%;height:100%;">
+            <img class="logo logo visible-sm logo visible-sm logo visible-sm visible-xs" src="images/small/erikslund_sm.jpg" alt="Erikslund" style="width:100%;height:100%;">
+        </p>
+        <p>Kloss intill E6:an, vid den södra infarten till Ängelholm hittar man Hotell Erikslund. Hotellet har en stor och välbesökt restaurang samt både gym och SPA för den som vill göra sig extra fin inför festen. Hotell Erikslund ingår i Coops förmånliga hotellerbjudande. Perfekt för den som vill stanna två nätter.</p>
+        <p><a target="_blank" class="btn btn-primary" href="http://www.hotellerikslund.se/sv" role="button">Hotellets Hemsida &raquo;</a></p> 
+        <p><a target="_blank" class="btn btn-primary" href="https://www.coophotellpremie.com/" role="button">Coop &raquo;</a></p>
+      </div>
+    
+              <div class="col-sm-4">
+        <h2>Vejbystrands Vandrarhem</h2>
+        <p>    
+            <img class="logo visible-lg" src="images/large/vejbystrand_lg.jpg" alt="Vejbystrands Vandrarhem" style="width:100%;height:100%;">
+            <img class="logo visible-md" src="images/medium/vejbystrand_md.jpg" alt="Vejbystrands Vandrarhem" style="width:100%;height:100%;">
+            <img class="logo logo visible-sm logo visible-sm logo visible-sm visible-xs" src="images/small/vejbystrand_sm.jpg" alt="Vejbystrands Vandrarhem" style="width:100%;height:100%;">
+        </p>
+        <p>500 meter från havet och cirka en mil väster om festen ligger detta nyrenoverade vandrarhem. Prisvärt alternativ för den som inte vill lägga mycket pengar på boendet. Här sov männen och kvinnorna som arbetade med bygget av tunneln genom Hallandsåsen. Frukost kan man antingen fixa själv eller beställa från personalen.</p>
+        <p><a target="_blank" class="btn btn-primary" href="http://www.vejbystrandsvandrarhem.se" role="button">Hotellets Hemsida &raquo;</a></p> 
+      </div>
+    
+  
+      <div class="col-sm-4">
+        <h2>Kvinnaböske Krog & Hotell</h2>
+        <p>
+            <img class="logo visible-lg" src="images/large/kvinnaboske_lg.jpg" alt="Kvinnaböske" style="width:100%;height:100%;">
+            <img class="logo visible-md" src="images/medium/kvinnaboske_md.jpg" alt="Kvinnaböske" style="width:100%;height:100%;">
+            <img class="logo logo visible-sm logo visible-sm visible-xs" src="images/small/kvinnaboske_sm.jpg" alt="Kvinnaböske" style="width:100%;height:100%;">
+        </p>
+        <p>Här är allt guld och gröna skogar! I alla fall om man ska tro traktens kändis. Personligt och mysigt litet hotell med 7 rum. </p>
+        <p><a target="_blank" class="btn btn-primary" href="http://www.kvinnaboske.se/" role="button">Hotellets Hemsida &raquo;</a></p> 
+      </div>
+    </div>
+
+        <div class="row">
+    <div class="col-sm-4">
         <h2>Hotell Lilton</h2> 
         <p>    
             <img class="logo visible-lg" src="images/large/lilton_lg.jpg" alt="Lilton" style="width:100%;height:100%;">
             <img class="logo visible-md" src="images/medium/lilton_md.jpg" alt="Lilton" style="width:100%;height:100%;">
             <img class="logo logo visible-sm logo visible-sm visible-xs" src="images/small/lilton_sm.jpg" alt="Lilton" style="width:100%;height:100%;">
         </p>
-        <p>Detta hotell finner ni på järnvägsgatan mitt i centrala Ängelholm, bara ett stenkast från kyrkan. Lilton är ett litet familjärt hotell inyst i ett sekelskifteshus</p>
+        <p>Detta hotell finner ni på Järnvägsgatan mitt i centrala Ängelholm, bara ett stenkast från kyrkan. Lilton är ett litet familjärt hotell inyst i ett sekelskifteshus</p>
         <p><a target="_blank" class="btn btn-primary" href="http://www.hotel-lilton.se/" role="button">Hotellets Hemsida &raquo;</a></p>      
-     </div>
-      <div class="col-sm-4">
-        <h2>Kvinnaböske Krog & Hotel</h2>
-        <p>
-            <img class="logo visible-lg" src="images/large/kvinnaboske_lg.jpg" alt="Kvinnaböske" style="width:100%;height:100%;">
-            <img class="logo visible-md" src="images/medium/kvinnaboske_md.jpg" alt="Kvinnaböske" style="width:100%;height:100%;">
-            <img class="logo logo visible-sm logo visible-sm visible-xs" src="images/small/kvinnaboske_sm.jpg" alt="Kvinnaböske" style="width:100%;height:100%;">
-        </p>
-        <p>Här är allt guld och gröna skogar. I fall man ska tro traktens kändis i alla fall. Dubbelrum från 1295 SEK</p>
-        <p><a target="_blank" class="btn btn-primary" href="http://www.kvinnaboske.se/" role="button">Hotellets Hemsida &raquo;</a></p> 
-      </div>
+     </div> 
+            </div>
     </div>
   </div> <!-- /container -->
 </div>
