--- a/public/templates/startpage.html
+++ b/public/templates/startpage.html
@@ -3,32 +3,25 @@
     <!-- Jumbotron -->
     <div class="jumbotron">
       <h1>Välkomna</h1>
-      <p class="lead">Här kommer vi presentera lite matnyttig information inför det stundande brölloppet. Förhoppningen är att allt efter som uppdatera och utveckla sidan ända fram till den stora dagen D</p>
+      <p class="lead">Varmt välkomna till hemsidan som handlar om vårt bröllop! Här kommer vi löpande att presentera matnyttig information inför den stundande dagen D.</p>
       <p></p>
     </div>
     <!-- Example row of columns -->
     <div class="row">
       <div class="col-sm-4">
-        <h2>Välkomna</h2>
+        <h2>Bröllopet</h2>
         <p>
-        	Bröllopet kommer att hållas i Ängelholms Kyrka kl 16:30. Efter vigseln kommer vi förflytta oss c:a 1 mil norr om Ängelholm för att tillsammans njuta av god mat och ett hejdundrande kalsas på Margretetorps Gästgivargård.
+        	Vigseln kommer att äga rum i Ängelholms Kyrka lördagen den 20 augusti klockan 16.30. Efter vigseln kommer vi att förflytta oss cirka 1 mil norr om Ängelholm för att tillsammans njuta av god mat och ett hejdundrande kalas på Margretetorp Gästgivargård. 
         </p>
       </div>
       <div class="col-sm-4">
         <h2>Resa till Ängelholm</h2>
-        <p>Det finns många sätt att ta sig till Ängelholm det går att komma hit med både buss, bil, tåg eller flyg då vi faktiskt har en egen flygplats i vår fina lilla stad. Flyg alternativet passar endast de som reser från Stockholmstrakten. För att ta sig från flygplatsen kan man antigen ta flygbuss som finns tillgänglit vid varje avgång eller taxi.
-        Väljer man att resa med tåg så kommer man komma in till centrala Ängelholm med bara några minuters gångväg ifrån kyrkan.
+        <p>Det finns många sätt att ta sig till Ängelholm på. Det går att komma hit med buss, bil, tåg eller flyg. Ängelholm ligger längs med E6:an och har goda tågkommunikationer. Ängelholms Kyrka ligger i centrala Ängelholm, på gångavstånd från stationen. Flygplatsen ligger lite utanför staden. Flygalternativet passar bäst för de som reser från Stockholmstrakten. Flygbuss, taxi och hyrbil finns tillgängligt.
       </div>
       <div class="col-sm-4">
         <h2>Om oss</h2>
         <p>Det har nu gått 10 år sen vi först träffade varann på den korridor som vi båda bodde på. Helt plötsligt försökte man tillbringa så mycket tid som möjligt i korridorens kök eller allrum ihopp om att den andre skulle vara där. Så nu tio år senare tyckte vi att det var dags att äntligen göra slag i saken och säga Ja till varandra i närvaro av våra vänner och bekanta</p>
        </div>
     </div>    
-    <div class="row">
-	 	<div class="col-sm-4">
-	        <h2>Presenter</h2>
-	        <p>Vi önskar oss inget särskilt utan är bara jätteglada för dem som vill vara med och fira vår stora dag tillsammans med oss. Är det ändå så att man känner att man vill ge något skulle vi i så fall bli glada för ett bidrag till vår bröllopsresa</p>        
-	     </div>
-    </div>
   </div> <!-- /container -->
 </div>
