--- a/public/templates/main.html
+++ b/public/templates/main.html
@@ -28,7 +28,12 @@
                 <li>
                     <a data-toggle="collapse" data-target=".navbar-collapse" ng-show="$root.logged_in" data-ui-sref="home.application">Anmälan</a>
                 </li>
-            </ul>                
+            </ul>
+            <ul class="nav navbar-nav">
+                <li>
+                    <a data-toggle="collapse" data-target=".navbar-collapse" ng-show="$root.logged_in" data-ui-sref="home.angelholm">Älska Ängelholm</a>
+                </li>
+            </ul>
             <ul class="nav navbar-nav">
                 <li>
                     <a data-toggle="collapse" data-target=".navbar-collapse" ng-show="$root.logged_in" data-ui-sref="home.contact">Kontakta Oss</a>
