--- a/public/templates/application.html
+++ b/public/templates/application.html
@@ -1,10 +1,12 @@
 <div class="row">
-    <p>
-    För att göra en anmälan lägger man till önskat antal deltagare med tillhörande information:
-    </p>
-    <input class="btn btn-primary" type="submit" value="Lägg till deltagare" ng-click="vm.addAttendee()">
-    <br>
-    <br>
+    <div class="col-sm-12">
+        <p>
+        För att göra en anmälan lägger man till önskat antal deltagare. När man är färdig klickar man på skicka/uppdatera sin anmälan för att meddela ifall man kommer eller inte:
+        </p>
+        <input class="btn btn-primary" type="submit" value="Lägg till deltagare" ng-click="vm.addAttendee()">
+        <br>
+        <br>
+    </div>
 </div>
 <div class="row">
     <div ng-repeat="attendee in vm.list_of_attendees track by $index">
