--- a/public/templates/church.html
+++ b/public/templates/church.html
@@ -90,8 +90,21 @@
     </div>
     <!-- Example row of columns -->
     <div class="row">
+        <div class="col-sm-6">
+            <h2>Ängelholms Kyrka</h2>
+                <p>
+                    Ängelholms Kyrka ligger i hjärtat av staden, vid Stortorget. Den nuvarande kyrkan uppfördes på 1700-talet, men man vet att det ända sedan början av 1500-talet legat en kyrka på just denna plats. Ängelholms första kyrka förstördes 1565 i samband med kriget mot svenskarna (Skåne tillhörde Danmark då). Kyrkan förblev i ruiner i mer är hundra år. Redan på 1200-talet uppfördes en kyrka i Luntertun, som idag är en stadsdel i norra Ängelholm. En av kyrkklockorna från kyrkan i Luntertun hänger nu i Ängelholms Kyrka. Klockan är daterad år 1470. Ängelholms kyrka används flitigt till gudstjänster, dop, konserter, luciakröning och den 20 augusti är det här vårt bröllop kommer hållas.
+                </p>
+        </div>
+        <div class="col-sm-6">
+            <h2>Hitta Till Kyrkan</h2>
+                <p>
+                    Parkering finns det gott om i anslutning till kyrkan. Var dock noga med att läsa på skyltarna vad som gäller. Ängelholms lapplisor är flitiga även på lördagar!
+                </p>
+        </div>
+    </div>      
+    <div class="row">
       <div class="col-sm-12">
-        <h2>Hitta till kyrkan</h2>
             <div id="map" style="height:500px"></div>
       </div>
     </div>
