--- a/public/templates/contact.html
+++ b/public/templates/contact.html
@@ -73,32 +73,32 @@
     <div class="row">
       <div class="col-sm-4">
         <h2>Gemensam</h2>
-        <p>E-post: info.brollopiagh@gmail.com</p>
+        <p>E-post: info.angelholmsbrollop@gmail.com</p>
       </div>
       <div class="col-sm-4">
         <h2>Matilda</h2>
         <p>Telefonummer: 0737-717717</p>
-        <p>E-post: matilda.brollopiagh@gmail.com</p>
+        <p>E-post: matilda.angelholmsbrollop@gmail.com</p>
       </div>
       <div class="col-sm-4">
         <h2>Emil</h2>
          <p>Telefonnummer: 0739-804435</p>
-         <p>E-post: emil.brollopiagh@gmail.com</p>
+         <p>E-post: emil.angelholmsbrollop@gmail.com</p>
       </div>
     </div>
     <div class="row">
       <div class="col-sm-4">
-        <h2>Toastmaster 1</h2>
+        <h2>Toastmaster Pernilla</h2>
         <p>Telefonummer: xxxx-xxxxxx</p>
-        <p>E-post: toast1.brollopiagh@gmail.com</p>
+        <p>E-post: toast.angelholmsbrollop@gmail.com</p>
       </div>
       <div class="col-sm-4">
         <h2>Toastmaster 2</h2>
          <p>Telefonnummer: xxxx-xxxxxxx</p>
-         <p>E-post: toast2.brollopiagh@gmail.com</p>
+         <p>E-post: toast.angelholmsbrollop@gmail.com</p>
       </div>
       <div class="col-sm-4">
-        <h2>Här bor vi</h2>
+        <h2>Här bor familjen Brozén</h2>
             <div id="map" style="height:300px"></div>
       </div>
     </div>
