--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -1,7 +1,7 @@
 <div class="row" >
  	<div class="container">
     	<div class="jumbotron">
-     		<h1>Ängelholmsbröllop<h/1>	
+     		<h1>Matilda & Emils Bröllopssida<h/1>	
       		<p class="lead">Välkommna till Matilda och Emils bröllopsida. För att ta del av informationen på sidan ombeds ni logga in med det användarnamn och lösenord som följde med i inbjudan 
       		</p>
 		</div>
