--- a/public/templates/party.html
+++ b/public/templates/party.html
@@ -67,7 +67,7 @@ function setMarkers(map) {
         <!-- Jumbotron -->
         <div class="jumbotron">
             <h1>Margretetorp</h1>
-            <p class="lead">Margretetorp finner ni på Hallandsåsens södra sluttning. På denna plats ska det ha funnits ett gästgiveri ända sedan 1300-talet      <a href="http://www.margretetorp.se">Margretetorp</a> 
+            <p class="lead">Vår bröllopsfest kommer att hållas på Margretetorp Gästgifvaregård, som ligger i den norra delen av Ängelholms kommun, i närheten av Hjärnarp.       <a href="http://www.margretetorp.se">Margretetorp</a> 
             </p>
             <p>
                 <img class="logo visible-lg" src="images/large/margretetorp_lg.jpg" alt="Margretetorp" style="width:100%;height:100%;">
@@ -80,7 +80,7 @@ function setMarkers(map) {
             <div class="col-sm-4">
                 <h2>Allmän information</h2>
                 <p>
-                Är det så att man känner för att hålla tal eller göra något annat upptåg under middagen är det bra att anmäla detta till någon utav toastmastrarna i förväg så att de kan planera. Kontaktuppgifter 
+                Är det så att man känner för att hålla tal eller göra något annat upptåg under middagen är det bra att anmäla detta till någon utav toastmastrarna i förväg så att de kan planera. Kontaktuppgifter hittar ni här nedan.
                 </p>
             </div>
             <div class="col-sm-4">
@@ -89,7 +89,7 @@ function setMarkers(map) {
             </div>
             <div class="col-sm-4">
 	           <h2>Gemensam Transfer</h2>
-	           <p>Vi kommer att ordna med gemensam transfer från kyrkan till festlokalen för de som önskar det. Bussen kommer att avgå från busshållsplatsen på Stortorget, strax utanför kyrkan.
+	           <p>Vi kommer att ordna med gemensam transfer från kyrkan till festlokalen för de som önskar det. Vänligen ange om ni önskar transfer när ni anmäler er.
                </p>        
             </div>
         </div>    
@@ -97,13 +97,13 @@ function setMarkers(map) {
             <div class="col-sm-4">
                 <h2>Toastmaster Pernilla</h2>
                 <p>
-                    Den som ska hålla i trådarna under festen är Pernilla Jacobsson Riaz. Pernillas kontaktuppgifter hittar ni här: 
+                    Den som ska hålla i trådarna under festen är Pernilla Jacobsson Riaz. Pernillas kontaktuppgifter hittar ni <a data-ui-sref="home.contact">här</a>
                 </p>
             </div>
             <div class="col-sm-4">
                 <h2>Toastmaster XXX</h2>
                 <p>
-                Här kommer komma lite information om vem som kommer vara toastmaster nr 2
+                Här kommer komma information om vem som kommer vara toastmaster nr 2
                 </p>
             </div>
             <div class="col-sm-4">
@@ -113,7 +113,7 @@ function setMarkers(map) {
         </div>
         <div class="row">
             <div class="col-sm-4">
-	           <h2>Presenter</h2>
+	           <h2>Present</h2>
 	           <p>Den bästa present vi kan få är att ni vill komma och dela dagen med oss. Vill ni ge oss en gåva, tar vi tacksamt emot ett bidrag till vår bröllopsresa.
                </p>        
             </div>
