--- a/public/templates/main.html
+++ b/public/templates/main.html
@@ -1,7 +1,7 @@
 <div class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <button type="button" class="navbar-toggle" ng-show="$root.logged_in" data-toggle="collapse" data-target=".navbar-collapse">
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -56,7 +56,7 @@
     <div class="row" id="footer">
         <div class="col-sm-12 col-md-12 col-lg-12">
             <hr>
-             <p>&copy; Emil o Matildas Bröllopssida - 2016</p>
+             <p>&copy; Matilda & Emils Bröllopssida - 2016</p>
         </div>
     </div>
 
