--- a/public/templates/main.html
+++ b/public/templates/main.html
@@ -1,5 +1,5 @@
-<div class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container">
+<nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" ng-show="$root.logged_in" data-toggle="collapse" data-target=".navbar-collapse">
                 <span class="icon-bar"></span>
@@ -46,7 +46,7 @@
             </ul>
         </div>
     </div>
-</div>
+</nav>
 <div class="container body-content">
     <div class="row" id="content">
         <div class="col-sm-12 col-md-12 col-lg-12">
