--- a/public/templates/thanks.html
+++ b/public/templates/thanks.html
@@ -6,12 +6,12 @@
 		<br>
 		<h3>Tack för din anmälan!</h3>
 		<br>
-		<p>I din anmälan har du angivit att det kommer {{(vm.user.num_participants > 1 || vm.user.num_participants === 0) ? vm.user.num_participants + ' personer':vm.user.num_participants + ' person'}} på bröllopet
+		<p>I din anmälan har du angivit att det kommer {{(vm.user.num_participants > 1 || vm.user.num_participants === 0) ? vm.user.num_participants + ' personer':vm.user.num_participants + ' person'}} på bröllopet.
 		<p>
-		Ifall du angav en e-post adress i din anmälan kommer du inom kort få ett mail med alla detaljer. 
+		Ifall du angav en e-post adress i din anmälan kommer du inom kort få ett mail med informationen du angav.
 		</p>
 		<P>
-		Kom ihåg att du kan alltid logga in på sidan igen för att ändra din anmälan. Det går bra att ändra/updatera sin anmälan fram till den 10:e juli.
+		Kom ihåg att du alltid kan logga in på sidan igen för att ändra din anmälan. Det går bra att ändra/uppdatera din anmälan fram till den 10:e juli.
 		</p>
 	</center>
 </div>
