Added support for admin role and added admin pages

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -42,6 +42,7 @@
         <script src="javascripts/app/controllers/applicationController.js"></script>
         <script src="javascripts/app/controllers/loginController.js"></script>
         <script src="javascripts/app/controllers/angelholmController.js"></script>
+        <script src="javascripts/app/controllers/adminController.js"></script>
         <!--Load filters-->
         <!--Load directives-->
     </body>
