Now support for export to excel file in admin mode

--- a/public/templates/admin.html
+++ b/public/templates/admin.html
@@ -66,3 +66,7 @@
 		<br>
 	</div>
 </div>
+<div class="row" >
+	<a target="_blank" href="Deltagarlista.xlsx" class="btn btn-md btn-default" type="submit" ng-click="vm.exportToExcel()">Exportera Till Excel
+	</a>
+</div>
