Reverted to version pre user role

--- a/public/templates/church.html
+++ b/public/templates/church.html
@@ -81,7 +81,7 @@
     <!-- Jumbotron -->
     <div class="jumbotron">
       <h1>Ängelholms Kyrka</h1>
-      <p class="lead">Ängelholms kyrka hittar ni mitt i hjärtat av staden. Den nuvarande kyrkan byggdes på 1700-talet på samma plats som kyrkan som danskarna brände ned 1565  <a target="_blank"href="https://www.svenskakyrkan.se/angelholm">Ängelholms Kyrka</a> </p>
+      <p class="lead">Ängelholms kyrka hittar ni mitt i hjärtat av staden. Den nuvarande kyrkan byggdes på 1700-talet på samma plats som kyrkan som danskarna brände ned 1565  <a href="https://www.svenskakyrkan.se/default.aspx?id=692189">Ängelholms Kyrka</a> </p>
       <p>    
             <img class="logo visible-lg" src="images/large/church_lg.jpg" alt="Church" style="width:100%;height:100%;">
             <img class="logo visible-md" src="images/medium/church_md.jpg" alt="Church" style="width:100%;height:100%;">
