--- a/public/templates/contact.html
+++ b/public/templates/contact.html
@@ -73,43 +73,29 @@
     <div class="row">
       <div class="col-sm-4">
         <h2>Gemensam</h2>
-        <br>
-        <p><b>E-post:</b></p> 
-        <p>info.angelholmsbrollop@gmail.com</p>
+        <p>E-post: info.angelholmsbrollop@gmail.com</p>
       </div>
       <div class="col-sm-4">
         <h2>Matilda</h2>
-        <br>
-        <p><b>Telefonummer:</b></p> 
-        <p>0737-717717</p>
-        <p><b>E-post:</b></p>
-        <p>matilda.angelholmsbrollop@gmail.com</p>
+        <p>Telefonummer: 0737-717717</p>
+        <p>E-post: matilda.angelholmsbrollop@gmail.com</p>
       </div>
       <div class="col-sm-4">
         <h2>Emil</h2>
-        <br>
-         <p><b>Telefonnummer:</b></p>
-         <p>0739-804435</p>
-         <p><b>E-post:</b></p>
-         <p>emil.angelholmsbrollop@gmail.com</p>
+         <p>Telefonnummer: 0739-804435</p>
+         <p>E-post: emil.angelholmsbrollop@gmail.com</p>
       </div>
     </div>
     <div class="row">
       <div class="col-sm-4">
         <h2>Toastmaster Pernilla</h2>
-        <br>
-        <p><b>Telefonummer:</b></p>
-        <p>0736-494886</p>
-        <p><b>E-post:</b></p> 
-        <p>toast.angelholmsbrollop@gmail.com</p>
+        <p>Telefonummer: xxxx-xxxxxx</p>
+        <p>E-post: toast.angelholmsbrollop@gmail.com</p>
       </div>
       <div class="col-sm-4">
         <h2>Toastmaster 2</h2>
-        <br>
-        <p><b>Telefonnummer:</b></p> 
-        <p>xxxx-xxxxxxx</p>
-        <p><b>E-post:</b></p>
-        <p>toast.angelholmsbrollop@gmail.com</p>
+         <p>Telefonnummer: xxxx-xxxxxxx</p>
+         <p>E-post: toast.angelholmsbrollop@gmail.com</p>
       </div>
       <div class="col-sm-4">
         <h2>Här bor familjen Brozén</h2>
