--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <title>Ängelholmsbröllop</title>
+        <title>Weddingpage</title>
         <!-- Load css in head not scripts -->
         <link href="/stylesheets/cssreset.css" rel="stylesheet" />
         <link href="/stylesheets/bootstrap.min.css" rel="stylesheet" />
@@ -42,7 +42,6 @@
         <script src="javascripts/app/controllers/applicationController.js"></script>
         <script src="javascripts/app/controllers/loginController.js"></script>
         <script src="javascripts/app/controllers/angelholmController.js"></script>
-        <script src="javascripts/app/controllers/adminController.js"></script>
         <!--Load filters-->
         <!--Load directives-->
     </body>
