--- a/public/templates/admin.html
+++ b/public/templates/admin.html
@@ -40,8 +40,18 @@
 		    <thead>
 		    	<tr>
 		    		<th><b></b></th>
-		        	<th><b>Förnamn</b></th>
-		        	<th><b>Efternamn</b></th>
+		        	<th>
+		        		<a ng-click="vm.sortBy('firstname')"><b>Förnamn</b>
+		        	 	<span class="glyphicon glyphicon-chevron-up" aria-hidden="true" ng-show="vm.propertyName === 'firstname' && vm.reverse"></span>
+		        	 	<span class="glyphicon glyphicon-chevron-down" aria-hidden="true" ng-show="vm.propertyName === 'firstname' && !vm.reverse"></span>
+		        	 	</a>
+		        	</th>
+		        	<th>
+		        		<a ng-click="vm.sortBy('lastname')"><b>Efternamn</b>
+		        		<span class="glyphicon glyphicon-chevron-up" aria-hidden="true" ng-show="vm.propertyName === 'lastname' && vm.reverse"></span>
+		        	 	<span class="glyphicon glyphicon-chevron-down" aria-hidden="true" ng-show="vm.propertyName === 'lastname' && !vm.reverse"></span>
+		        		</a>
+		        	</th>
 		        	<th><b>Epost</b></th>
 		        	<th><b>Deltager</b></th>
 		        	<th><b>Transfer</b></th>
@@ -50,7 +60,7 @@
 		      	</tr>
 			</thead>
 			<tbody>	
-				<tr ng-repeat="attendee in vm.list_of_applications">
+				<tr ng-repeat="attendee in vm.list_of_applications | orderBy:vm.propertyName:vm.reverse">
 					<td><b>{{$index + 1}}</b></td>
 					<td>{{attendee.firstname}}</td>
 					<td>{{attendee.lastname}}</td>
